# KGEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: KGEngine.cpp  KGEngine.h  Renderer.cpp  Renderer.hpp  main.cpp  main.hpp  testing.cpp
